# admm

./: .gitignore  .gitmodules  ADMMConfig.cmake.in  CMakeLists.txt  Config.cmake.in  README.md
ModernRobotics/: CMakeLists.txt  ModernRoboticsCppConfig.cmake.in
ModernRobotics/config/MR/cmake/: ModernRoboticsCppConfig.cmake  ModernRoboticsCppConfigVersion.cmake  ModernRoboticsCppTargets-noconfig.cmake  ModernRoboticsCppTargets-release.cmake  ModernRoboticsCppTargets.cmake
ModernRobotics/src/: modern_robotics.cpp
admm/: ADMMMultiBlock.cpp  ADMMTrajOptimizer.cpp  ADMMTrajOptimizerMPC.cpp  CMakeLists.txt  admm.cpp  admm_main.cpp  admm_mpc_main.cpp  ddp.cpp  ilqrsolver_admm.cpp  mpc.cpp  mpc_main.cpp
admm/include/: ADMMMultiBlock.hpp  ADMMTrajOptimizer.hpp  ADMMTrajOptimizerMPC.hpp  IterativeLinearQuadraticRegulatorADMM.hpp  IterativeLinearQuadraticRegulatorADMMPublic.cpp  IterativeLinearQuadraticRegulatorADMMold.hpp  ModelPredictiveControlADMM.hpp  ProjectionOperator.hpp  RobotPublisherMPC.hpp  admm.hpp  admmPublic.hpp  admm_main.hpp  admm_mpc_main.hpp  admm_public.hpp  ilqrsolver_admm.hpp  mpc_admm.hpp  projection_operator.hpp
admm/old/: ADMMTrajOptimizerMPC.cpp  IterativeLinearQuadraticRegulatorADMM.cpp
cfg/: config_parser.cpp
cnpy/: CMakeLists.txt  CNPYConfig.cmake.in
data/: 3dtest.npy  cartesian_trajectory_admm.npy  joint_array.npy  plot_joint_traj.py  plot_kuka_states.py  plot_state_trajectory_admm.py  plot_state_trajectory_admm_iterations.py  plot_state_trajectory_admm_mpc.py  plot_state_trajectory_admm_test.py  plot_state_trajectory_ddp.py  plot_state_trajectory_ddp_mpc.py  standalone⁩arr1.npy  state_trajectory_admm_mpc.npy  state_trajectory_admm_mpc_desired.npy  state_trajectory_ddp.npy  state_trajectory_ddp_desired.npy  state_trajectory_mpc.npy  state_trajectory_mpc_desired.npy
data/test_velocity/: kuka-state-KUKAJointVelocity.csv
ddp/: CMakeLists.txt  ddp.cpp  ilqrsolver.cpp
ddp/include/: cost_function.h  ddp.h  ilqrsolver.h
ddp/old/: kuka_arm.cpp
ik-solvers/: CMakeLists.txt  DiffIKSolver.cpp  differential_ik_solver.cpp  ik_solver.cpp  ik_test.cpp
ik-solvers/include/: DiffIKSolver.hpp  DiffIKTrajectory.hpp  differential_ik_solver.hpp  ik_solver.hpp  ik_trajectory.hpp
include/: Cost.hpp  CostFunctionADMM.hpp  CostFunctionContact.hpp  Dynamics.hpp  Plant.hpp  RobotAbstract.h  RobotDynamics (copy).hpp  RobotDynamics.hpp  RobotPlant.hpp  SoftContactModel.h  admm.hpp  admm_main.hpp  config.h  cost_function.h  cost_function_admm.h  cost_function_admm.hpp  cost_function_contact.h  curvature.hpp  ddp.h  eigenmvn.hpp  ilqrsolver.h  ilqrsolver_admm.hpp  kuka_arm.h  logger.hpp  mpc.hpp  mpc_admm.hpp  plant.h  plant.hpp  robot_dynamics.hpp  robot_plant.hpp  soft_contact_model.hpp  utils.h
include/old/: admm_main.hpp  ilqrsolver.h  ilqrsolver_admm.hpp  kuka_robot.hpp
plant-models/: CMakeLists.txt  KUKACodGenLinearizer.cpp  KUKASoftContactFDSystem.h  KUKASoftContactSystemCodGenLinearizer.cpp  KukaModel.cpp  main_test_models.cpp  models.ccp.cc  models.cpp
plant-models/Analytical/: RobotAnalytical.cpp
plant-models/KDL/: KukaModel.cpp  kuka_model.cpp  kuka_model.h  models.h
plant-models/RobCodGen/: KUKA.h  KUKAUrdfNames.h  RobCodGenModel.cpp  RobCodGenModel.h
plant-models/RobCodGen/codegen/: KUKALinearizedForward.cpp  KUKALinearizedForward.h  KUKALinearizedReverse.cpp  KUKALinearizedReverse.h  KUKASoftContactSystemLinearizedForward.cpp  KUKASoftContactSystemLinearizedForward.h
plant-models/RobCodGen/models/: Kuka.urdf  kuka_iiwa.dtdsl  kuka_iiwa.kindsl
plant-models/analytical/: KUKAAnalyticalSolutions.cpp
plant-models/include/: KukaModel.h  kuka_robot.hpp  models.h
src/: OPT_solvers.cpp  RobotDynamics.cpp  admm.cpp  admm_main.cpp  admm_mpc_main.cpp  ddp.cpp  ddp_main.cpp  ilqrsolver.cpp  ilqrsolver_admm.cpp  ilqrsolver_track.cc  kuka_arm.cpp  main.cpp  main_admm.cpp  main_admm_mpc.cpp  main_admm_rcg.cpp  main_admm_rcg_mpc.cpp  main_test_models.cpp  mpc_main.cpp  test.cpp  testhdf5.cpp
src-ddp/: ddp.cpp  ddp_main.cpp
src/old/: admm_mpc_main.cpp  ilqrsolver.cpp  kuka_arm.cpp  kuka_arm_track.cc  runADMM_softcontact.cc
